[project]
name = "library-org-il-helper"
version = "0.1.0"
description = "Workspace for interacting with library.org.il Israeli public library websites"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Library IL Helper Contributors" }
]

[dependency-groups]
dev = []

[tool.uv.workspace]
members = ["packages/*"]
